--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
  .Photography-content {
   display: none;
   position: absolute;
-  background: #fff;
+  background: #f3f3f3;
+  color: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
@@ -194,9 +195,10 @@
         }
 
         .Sport-content {
-            display: none;
+  display: none;
   position: absolute;
-  background: #fff;
+  background: #f3f3f3;
+  color: #fff;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
@@ -246,7 +248,7 @@
         .Education .dropbtn {
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 21px;
-            color: #fff;
+            color: #f3f3f3;
             background: inherit;
             padding: 14.75px 8px;
             border: none;
@@ -262,8 +264,9 @@
         .Education-content {
             display: none;
   position: absolute;
-  background: #fff;
- border-top: 0.1rem solid rgb(5, 5, 85);
+  color: #fff;
+  background: #f3f3f3;
+  border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
   box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
@@ -328,10 +331,10 @@
         }
 
         .Videos-content {
-  
+  color:#fff;
   display: none;
   position: absolute;
-  background: #fff;
+  background: #f3f3f3;
   padding: 1px;
   z-index: 1;
   box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
