--- a/index.html
+++ b/index.html
@@ -135,12 +135,14 @@
   color: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 
         .Photography-content a {
-            font-size: 15px;
+            font-size: 17px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -154,21 +156,22 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 38px;
+            line-height: 36px;
         }
 
         .Photography:hover .Photography-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.25s linear;
         }
         .Photography:hover .Photography-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: 31%;
         }
@@ -201,12 +204,14 @@
   color: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
         }
 
         .Sport-content a {
-            font-size: 15px;
+            font-size: 16px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -225,17 +230,18 @@
 
         .Sport:hover .Sport-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.25s linear;
         }
 
         .Sport:hover .Sport-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: 21%;
         }
@@ -269,13 +275,15 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 260px;
   z-index: 1;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
         }
 
         .Education-content a {
-            font-size: 15px;
+            font-size: 16px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -294,7 +302,8 @@
 
         .Education:hover .Education-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
@@ -304,7 +313,7 @@
         .Education:hover .Education-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: 25%;
         }
@@ -337,12 +346,14 @@
   background: #f3f3f3;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
- border-top: 0.1rem solid rgb(5, 5, 85);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
+  border-top: 0.1rem solid rgb(5, 5, 85);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
         }
 
         .Videos-content a {
-            font-size: 15px;
+            font-size: 17px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -356,22 +367,23 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 37px;
+            line-height: 36px;
         }
 
         .Videos:hover .Videos-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.25s linear;
         }
 
         .Videos:hover .Videos-content {
             display: grid;
             grid-template-columns: 1fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: auto;
         }
@@ -404,13 +416,15 @@
   padding: 1px;
   z-index: 1;
   border-top: 0.1rem solid rgb(5, 5, 85);
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 270px;
   z-index: 1;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
         }
 
         .Photos-content a {
-            font-size: 15px;
+            font-size: 17px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -424,22 +438,23 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 38px;
+            line-height: 36px;
         }
 
         .Photos:hover .Photos-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.25s linear;
         }
 
         .Photos:hover .Photos-content {
             display: grid;
             grid-template-columns: 1fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: auto;
         }
@@ -473,11 +488,13 @@
   border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
         }
 
         .Community-content a {
-            font-size: 15px;
+            font-size: 17px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -491,22 +508,22 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 38px;
+            line-height: 36px;
         }
 
         .Community:hover .Community-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.25s linear;
         }
         
         .Community:hover .Community-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: 39%;
         }
@@ -538,15 +555,17 @@
   position: absolute;
   background: #f3f3f3;
   padding: 1px;
- border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 265px;
   margin-left: 45px;
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
         }
 
         .TikiYiki-content a {
-            font-size: 15px;
+            font-size: 17px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -560,25 +579,26 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 38px;
+            line-height: 36px;
         }
 
         .TikiYiki:hover .TikiYiki-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.26s linear;
         }
 
         .TikiYiki:hover .TikiYiki-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             column-gap: normal;
-            width: 22%;
+            width: 24%;
         }
 
         .Disability {
@@ -607,14 +627,16 @@
   position: absolute;
   background: #f3f3f3;
   padding: 1px;
-  border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top: 0.1rem solid rgba(5, 10, 91, 0.767);
   z-index: 1;
-  box-shadow: 0 2.2px 0.35rem 0 rgba(0, 33, 182, 0.747);
+  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 270px;
-        }
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
 
         .Disability-content a {
-            font-size: 15px;
+            font-size: 17px;
             float: none;
             color: #06123f;
             padding: 14px 16px;
@@ -628,22 +650,23 @@
             font-family: 'georgia';
             padding: 8px 10px;
             font-size: 16px;
-            line-height: 38px;
+            line-height: 36px;
         }
 
         .Disability:hover .Disability-content:hover a:hover{
             width: auto;
-            height: 45px;
+            height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.16s linear;
+            transition: 0.25s linear;
         }
 
         .Disability:hover .Disability-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: center;
+            justify-content: space-between;
             justify-items: center;
             width: 35%;
         }
