--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
@@ -206,6 +207,7 @@
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
         }
@@ -278,6 +280,7 @@
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 260px;
   z-index: 1;
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
         }
@@ -303,6 +306,7 @@
         .Education:hover .Education-content:hover a:hover{
             width: auto;
             height: 50px;
+            text-align: center;
             text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
@@ -348,6 +352,7 @@
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
         }
@@ -403,9 +408,9 @@
         }
 
         .navbar:hover .Photos:hover .dropbtn {
-            border-bottom: 0.35rem solid rgb(255, 135, 6);
+            border-bottom: 0.3rem solid rgb(255, 135, 6);
             color: rgb(0, 140, 255);
-            transition: 0.12s ease;
+            transition: 0.18s linear;
             cursor: pointer;
         }
 
@@ -415,10 +420,11 @@
   background: #f3f3f3;
   padding: 1px;
   z-index: 1;
-  border-top: 0.1rem solid rgb(5, 5, 85);
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 270px;
   z-index: 1;
+  border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
         }
@@ -489,6 +495,7 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
         }
@@ -514,6 +521,7 @@
         .Community:hover .Community-content:hover a:hover{
             width: auto;
             height: 50px;
+            text-align: center;
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
@@ -544,9 +552,9 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-           border-bottom: 0.35rem solid rgb(255, 135, 6);
-           color: rgb(0, 140, 255);
-            transition: 0.12s ease;
+            border-bottom: 0.3rem solid rgb(255, 135, 6);
+            color: rgb(0, 140, 255);
+            transition: 0.16s linear;
             cursor: pointer;
         }
 
@@ -555,11 +563,12 @@
   position: absolute;
   background: #f3f3f3;
   padding: 1px;
-  border-top: 0.1rem solid rgb(5, 5, 85);
   z-index: 1;
-  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
+  box-shadow: 0 3px 0.3rem 1px rgba(11, 17, 114, 0.847);
   width: 265px;
   margin-left: 45px;
+  border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
         }
@@ -589,7 +598,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.26s linear;
+            transition: 0.25s linear;
         }
 
         .TikiYiki:hover .TikiYiki-content {
@@ -598,6 +607,7 @@
             justify-content: space-between;
             justify-items: center;
             column-gap: normal;
+            padding: 5px;
             width: 24%;
         }
 
@@ -616,9 +626,9 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border-bottom: 0.35rem solid rgb(255, 135, 6);
+            border-bottom: 0.3rem solid rgb(255, 135, 6);
             color: rgb(0, 140, 255);
-            transition: 0.12s ease;
+            transition: 0.16s linear;
             cursor: pointer;
         }
 
@@ -627,10 +637,11 @@
   position: absolute;
   background: #f3f3f3;
   padding: 1px;
-  border-top: 0.1rem solid rgba(5, 10, 91, 0.767);
   z-index: 1;
-  box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
+  box-shadow: 0 3px 0.3rem 1px rgba(11, 17, 114, 0.847);
   width: 270px;
+  border-top: 0.1rem solid rgb(5, 5, 85);
+  border-top-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   border-bottom-right-radius: 0.5rem;
 }
