--- a/index.html
+++ b/index.html
@@ -3316,8 +3316,8 @@ function showSlides(n) {
 
             <div>
                 <a href="https://www.playgeography.com/games/countries-of-africa/" target="blank">Play Africa Geography</a>
-                <a href="https://www.playgeography.com/games/countries-of-north-america/" target="blank">Play North America Geography</a>
-                <a href="https://www.playgeography.com/games/countries-of-south-america/" target="blank">Play south America Geography</a>
+                <a href="https://www.playgeography.com/games/countries-of-north-america/" target="blank">Play N. America Geography</a>
+                <a href="https://www.playgeography.com/games/countries-of-south-america/" target="blank">Play S. America Geography</a>
                 <a href="https://www.playgeography.com/games/countries-of-asia/" target="blank">Play Asia Geography</a>
                 <a href="https://www.playgeography.com/games/countries-of-europe/" target="blank">Play Europe
                     Geography</a>      
