--- a/index.html
+++ b/index.html
@@ -3484,20 +3484,20 @@ function showSlides(n) {
 
                         <div class="kk">
                             <figure>
-                                <img src="https://zupimages.net/up/22/32/mfk2.jpg" alt="Red Flower">
+                                <img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Red Flower">
                                 <figcaption
-                                    style="font-family: 'arial'; font-size: 11.45px; text-align: left; color: rgba(88, 88, 88, 0.984);">
-                                    What is the name of this flower ?</figcaption>
+                                    style="font-family: 'arial'; font-size: 11.45px; text-align: left;  color: rgba(81, 60, 177, 0.937);">
+                                    Supporting courses at Tiki N'Yiki</figcaption>
                             </figure>
                         </div>
 
                         <div class="kk1">
                             <figure>
                                 <figcaption
-                                    style="font-family: 'arial'; font-size: 11.45px; text-align: left; color: rgba(88, 88, 88, 0.984);">
-                                    Red and Yellow Flowers</figcaption>
-                                <img src="https://zupimages.net/up/22/31/ogtl.jpg"
-                                    alt="Beautiful Flower on Bld Rene Levesque">
+                                    style="font-family: 'arial'; font-size: 11.45px; text-align: left; color: rgba(81, 60, 177, 0.937);">
+                                    Celebrating Christmas in Burkina Faso</figcaption>
+                                    <img src="https://zupimages.net/up/22/31/z42x.jpg"
+                                    alt="Celebrating Christmas in Burkina Faso">
                             </figure>
                         </div>
 
