--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgb(2, 2, 62);
+            background: rgba(1, 1, 23, 0.96);
             height: 56px;
             object-fit: cover;
             z-index: 1;
@@ -137,9 +137,9 @@
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
 }
 
         .Photography-content a {
@@ -207,9 +207,9 @@
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
         }
 
         .Sport-content a {
@@ -280,9 +280,9 @@
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 260px;
   z-index: 1;
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
         }
 
         .Education-content a {
@@ -352,9 +352,9 @@
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   border-top: 0.1rem solid rgb(5, 5, 85);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
         }
 
         .Videos-content a {
@@ -423,10 +423,9 @@
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
   width: 270px;
   z-index: 1;
-  border-top: 0.1rem solid rgb(5, 5, 85);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
         }
 
         .Photos-content a {
@@ -495,9 +494,9 @@
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.35rem 1px rgba(5, 10, 91, 0.767);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.4rem;
+  border-bottom-left-radius: 0.4rem;
+  border-bottom-right-radius: 0.4rem;
         }
 
         .Community-content a {
@@ -568,9 +567,9 @@
   width: 265px;
   margin-left: 45px;
   border-top: 0.1rem solid rgb(5, 5, 85);
-  border-top-right-radius: 0.45rem;
-  border-bottom-left-radius: 0.45rem;
-  border-bottom-right-radius: 0.45rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
         }
 
         .TikiYiki-content a {
@@ -641,9 +640,9 @@
   box-shadow: 0 3px 0.3rem 1px rgba(11, 17, 114, 0.847);
   width: 270px;
   border-top: 0.1rem solid rgb(5, 5, 85);
-  border-top-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  border-bottom-right-radius: 0.5rem;
+  border-top-right-radius: 0.44rem;
+  border-bottom-left-radius: 0.44rem;
+  border-bottom-right-radius: 0.44rem;
 }
 
         .Disability-content a {
