--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
         }
 
         .navbar:hover .Photography:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
@@ -192,9 +194,11 @@
         }
 
         .navbar:hover .Sport:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
@@ -263,14 +267,16 @@
         }
 
         .navbar:hover .Education:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
         .Education-content {
-            display: none;
+  display: none;
   position: absolute;
   color: #fff;
   background: #f3f3f3;
@@ -337,9 +343,11 @@
         }
 
         .navbar:hover .Videos:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+           border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
@@ -408,9 +416,11 @@
         }
 
         .navbar:hover .Photos:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
@@ -423,6 +433,7 @@
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
   width: 270px;
   z-index: 1;
+  border-top: 0.1rem solid rgb(5, 5, 85);
   border-top-right-radius: 0.44rem;
   border-bottom-left-radius: 0.44rem;
   border-bottom-right-radius: 0.44rem;
@@ -479,9 +490,11 @@
         }
 
         .navbar:hover .Community:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
@@ -490,10 +503,10 @@
   display: none;
   position: absolute;
   background: #f3f3f3;
-  border-top: 0.1rem solid rgb(5, 5, 85);
   padding: 1px;
   z-index: 1;
   box-shadow: 0 3px 0.3rem 2px rgba(15, 33, 124, 0.875);
+  border-top: 0.1rem solid rgb(5, 5, 85);
   border-top-right-radius: 0.4rem;
   border-bottom-left-radius: 0.4rem;
   border-bottom-right-radius: 0.4rem;
@@ -551,9 +564,11 @@
         }
 
         .navbar:hover .TikiYiki:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
@@ -625,9 +640,11 @@
         }
 
         .navbar:hover .Disability:hover .dropbtn {
-            border-bottom: 0.3rem solid rgb(255, 135, 6);
-            color: rgb(0, 140, 255);
-            transition: 0.18s linear;
+            border: 0.1px solid rgb(255, 135, 6);
+            border-top: none;
+            border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
+            color: rgb(0, 149, 255);
+            transition: 0.1s linear;
             cursor: pointer;
         }
 
