--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
  .Photography-content {
@@ -200,6 +201,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .Sport-content {
@@ -273,6 +275,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .Education-content {
@@ -343,12 +346,13 @@
         }
 
         .navbar:hover .Videos:hover .dropbtn {
-           border: 0.1px solid rgb(255, 135, 6);
+            border: 0.1px solid rgb(255, 135, 6);
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .Videos-content {
@@ -422,6 +426,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .Photos-content {
@@ -496,6 +501,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .Community-content {
@@ -570,6 +576,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .TikiYiki-content {
@@ -646,6 +653,7 @@
             color: rgb(0, 149, 255);
             transition: 0.1s linear;
             cursor: pointer;
+            background: rgba(5, 5, 99, 0.486);
         }
 
         .Disability-content {
