--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
             color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Photography:hover .dropbtn {
@@ -190,8 +192,10 @@
             font-size: 21px;
             color: #fff;
             background: inherit;
-            padding: 14px 8px;
-            border: none;
+            padding: 14.75px 8px;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Sport:hover .dropbtn {
@@ -262,10 +266,12 @@
         .Education .dropbtn {
             font-family: 'Barlow Condensed', sans-serif;
             font-size: 21px;
-            color: #f3f3f3;
+            color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Education:hover .dropbtn {
@@ -342,7 +348,9 @@
             color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Videos:hover .dropbtn {
@@ -416,7 +424,9 @@
             color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Photos:hover .dropbtn {
@@ -491,7 +501,9 @@
             color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Community:hover .dropbtn {
@@ -565,7 +577,9 @@
             color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
             margin-left: 45px;
         }
 
@@ -643,7 +657,9 @@
             color: #fff;
             background: inherit;
             padding: 14.75px 8px;
-            border: none;
+            border: 0.1px solid transparent;
+            border-top: none;
+            border-bottom: 0.25rem solid transparent;
         }
 
         .navbar:hover .Disability:hover .dropbtn {
