--- a/index.html
+++ b/index.html
@@ -3734,7 +3734,7 @@ function showSlides(n) {
                                 To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
                                 Strongly Preserve It</b> </p>
                                 <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">Promoting Saxiwama as a cultural
-                            practice is a best way to preserve and transmit it.</p>
+                            practice is a best way to transmit and preserve it.</p>
                     </div>
                 </a>
 
@@ -3744,7 +3744,7 @@ function showSlides(n) {
                             <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="Tree Trunk" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
-                                Mask at the festival des masques of Dédougou-BFASO</figcation>
+                                A Mask during Festima [Festival des Masques-BF]</figcation>
                         </figure>
                     </div>
                 </a>
