--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         }
         
         .navbar {
-            background: rgba(4, 10, 54, 0.994);
+            background: rgba(4, 9, 50, 0.994);
             height: 56px;
             object-fit: cover;
             z-index: 1;
@@ -3738,13 +3738,13 @@ function showSlides(n) {
                     </div>
                 </a>
 
-                <a href="file:///C:/Users/User/Documents/saxiwam.html" target="_blank">
+                <a href="https://en.wikipedia.org/wiki/FESTIMA" target="_blank">
                     <div class="k-imageP">
                         <figure>
-                            <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="Tree Trunk" />
+                            <img src="https://live.staticflickr.com/7190/6816656354_65f2a54dcf_b.jpg" alt="A Mask during a Festima in dédougou-Burkina Faso" />
                             <figcation
                                 style="font-family: 'trebuchet ms'; font-size: 12.95px; text-align: left; color: rgb(126, 126, 126)">
-                                A Mask during Festima [Festival des Masques-BF]</figcation>
+                                A Mask during Festima [A Festival of Masks-BF]</figcation>
                         </figure>
                     </div>
                 </a>
