--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -203,7 +203,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -279,7 +279,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -358,7 +358,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -434,7 +434,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -511,7 +511,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -588,7 +588,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -667,7 +667,7 @@
             border-top: none;
             border-bottom: 0.25rem solid rgba(0, 149, 255, 0.971);
             color: rgb(0, 149, 255);
-            transition: 0.1s linear;
+            transition: 0.25s ease;
             cursor: pointer;
             background: rgba(7, 7, 102, 0.486);
         }
@@ -3129,7 +3129,7 @@ background: #717171;
             position: relative;
             top: 25px;
             background-color: #fffffff9;
-            color: rgba(159, 159, 159, 0.961);
+            color: rgb(0, 149, 255);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -3488,7 +3488,7 @@ function showSlides(n) {
 
         <div class="s-wrapper">
             <div class="reader">
-                <b>Welcome ! This Website is in Developping Project. Paths To Some Of Links Are Not Set Yet. Thank You For Understanding !</b>
+                <b>Welcome ! This Website is in Project. Some of the Pics And Links Are Temporary Or Not Set Yet. Enjoy your Visit ! Thank You !</b>
             </div>
 
             
@@ -3558,13 +3558,13 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Tik-Yik.html" target="_blank">
                     <div class="k-image22" id="k-image2">
-                        <p style="text-align: left; font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                        <p style="text-align: left; font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255);">
                             <b>
                                 What Tiki Yiki is Meaning ? What Tiki N'Yiki is Doing ?
                             </b>
                             </p>
 
-                            <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
+                            <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;"><b>In Burkina Faso</b> as everywhere there is a lot of challenges about inclusiveness. Getting "<b>differently able people especially disabled
                             people</b>" included in communities is not regular on the daily basis. But it's so important to give them opportunities even their disabilities. Some organisations
                             are steadily working to get it done including to be trully inclusive.
                             <br>
@@ -3592,12 +3592,12 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/education.html" target="_blank">
                     <div class="k-image2">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; padding: 5px; color: rgba(32, 32, 32, 0.654); line-height: 26px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; padding: 5px; color: rgb(0, 149, 255);">
                             <b> "Inclusiveness" May Be Ordinary Or New To You. But Inclusiveness Is Worded In The Dictionary
                                 And Existed Since Its Creation. It Belongs To Human-Beings To Put It Into Practical Life. That's Why Inclusiveness in
                                 Education Also Matters. It's Not A Privilege But A Right For Every Kid Including Those Who Are Disabled And/Or Different.</b> </p>
 
-                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;"><b>Inclusive Education</b> has no
+                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;"><b>Inclusive Education</b> has no
                             room everywhere. It should not be a privilege but an intrinsic right.</p>
                     </div>
                 </a>
@@ -3619,9 +3619,9 @@ function showSlides(n) {
 
                 <a href="file:///C:/Users/User/Documents/Health-Care.html" target="_blank">
                     <div class="k-imagek3">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Health Care Is A Human Right Worldwide. But In Some Regions Around The World, People Are Dying Because Simply Of Malaria.</b> </p>
-                        <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
+                        <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;"><b>Health Care</b> is a human basic right worldwide. But not everyone has it everywhere. In Africa some people are dying from diseases that can be avoided. It should'nt.</p>
                     </div>
                 </a>
 
@@ -3643,9 +3643,9 @@ function showSlides(n) {
 
                 <a href="#" target="_blank">
                     <div class="k-imagek4">
-                        <p style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
+                        <p style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>What Means Food Security? What Should Be Done To Fix Food Insecurity Worldwide?</b> </p>
-                            <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">While in some regions
+                            <p style="font-family: Georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;">While in some regions
                             worldwide people have no more to worry about <b>Food Security</b>, in some other ones, it is
                             unfortunately not the same reality. There are ceaselessly worries in terms of Food Security. They have to struggle
                             hard to get needs met. In some worse cases, some died. But No Food Security, No Sustainable Development.
@@ -3671,11 +3671,13 @@ function showSlides(n) {
                 <a href="https://www.un.org/en/global-issues/climate-change" target="_blank">
                     <div class="k-imagek5">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
-                            <b>Climate Change Is a Big Threat To Earth And To Human-Beings. Climate Change is Deadly Causing Floodings, Wildfires, Droughts,                    Earthquakes And Volcanos Around The World. There Is No Doubt that Climate Change Has More Endangered Earth Than Never Before. 
+                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
+                            <b>Climate Change Is a Big Threat To Human-Beings And To Earth. Climate Change is Deadly Causing Floodings, Wildfires, Droughts, Earthquakes And Volcanos Around The World. There Is No Doubt that Climate Change Has More Endangered Earth Than Never Before. 
                                 But Human-Being Has Provoked It Through His Continual Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].</b> </p>
-                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">
+                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
+                            <br>
+                            || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255)">Earthquakes</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Tsunamis</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Floodings</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Wildfires</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Volcanos</em> ||
                         </p>
                     </div>
                 </a>
@@ -3699,11 +3701,11 @@ function showSlides(n) {
                 <a href="#" target="_blank">
                     <div class="k-imagek6">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Disability Is Not Destiny. But For Disabled People Living In Exclusive Areas, They
                                 Have To Struggle Two Times Harder At Least Than Anyone To Get Their Needs And Achieve.
                                 They are experiencing Toxic Environments Favored By A Lot Of Stigmatisations.</b> </p>
-                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">As a disabled person, I experienced
+                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;">As a disabled person, I experienced
                             and still experiencing discriminations. It's too tough and challenging but It's Teaching . I
                             have to find out a way to get my rights respected
                             as human-being.</p>
@@ -3728,12 +3730,12 @@ function showSlides(n) {
                 <a href="file:///C:/Users/User/Documents/saxiwam.html" target="_blank">
                     <div class="k-imagek7">
                         <p
-                            style="font-family: 'Titillium Web', sans serif; font-size: 21px; color: rgba(32, 32, 32, 0.654); line-height: 26px; padding: 5px;">
+                            style="font-family: 'Titillium Web', sans serif; font-size: 18px; line-height: 25px; color: rgb(0, 149, 255); padding: 5px;">
                             <b>Culture Is Like A Backbone For Communities To Survive In The Biggest Family Of Diversity. It's A Way To
                                 Promote And Preserve Cultural Identity From Elders [Grand-Parents and Parents] To Kids or
                                 To Grand-Sons. Everyone Is Playing A Key Role Of Transmission In Order To
                                 Strongly Preserve It</b> </p>
-                                <p style="font-family: arial; color: rgba(49, 49, 49, 0.768); font-size: 15px; line-height: 20px; padding: 5px;">Promoting Saxiwama as a cultural
+                                <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 20px; padding: 5px;">Promoting Saxiwama as a cultural
                             practice is a best way to transmit and preserve it.</p>
                     </div>
                 </a>
