--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,7 @@
         }
 
         .content1 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
             background-color: #f3f3f3fc;
         }
@@ -1643,9 +1643,9 @@
         }
 
         .content2 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
-            background-color: #f3f3f3fc;
+            background-color: #f3f3f3ec;
         }
 
         .k-image3 {
@@ -1709,7 +1709,7 @@
         }
 
         .content3 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
             background-color: #f3f3f3fc;
         }
@@ -1773,7 +1773,7 @@
         }
 
         .content4 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
             background-color: #f3f3f3fc;
         }
@@ -1837,7 +1837,7 @@
         }
 
         .content5 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
             background-color: #f3f3f3fc;
         }
@@ -1901,7 +1901,7 @@
         }
 
         .content6 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
             background-color: #f3f3f3fc;
         }
@@ -1965,7 +1965,7 @@
         }
 
         .content7 a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
             background-color: #f3f3f3fc;
         }
@@ -2025,7 +2025,7 @@
         }
 
         .contentx a:hover {
-            box-shadow: 0px -1px 0.45rem 0.5px rgba(78, 78, 78, 0.971);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             transition: 0.25s linear;
         }
 
@@ -2084,7 +2084,7 @@
             color: rgba(103, 103, 103, 0.751);
             border-radius: 1rem;
             border: 0.1px solid rgba(202, 202, 202, 0.254) !important;
-            box-shadow: 0px 0.2px 8.8px 2.2px rgba(71, 71, 71, 0.615);
+            box-shadow: 0 -1px 0.5rem 0.5px rgb(49, 128, 255);
             cursor: pointer;
             padding: 10px;
         }
