--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
         .Photography:hover .Photography-content {
             display: grid;
@@ -326,7 +326,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
 
         .Education:hover .Education-content {
@@ -402,7 +402,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
 
         .Videos:hover .Videos-content {
@@ -479,7 +479,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
 
         .Photos:hover .Photos-content {
@@ -555,7 +555,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
         
         .Community:hover .Community-content {
@@ -633,7 +633,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
 
         .TikiYiki:hover .TikiYiki-content {
@@ -711,7 +711,7 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.25s linear;
+            transition: 0.5s ease;
         }
 
         .Disability:hover .Disability-content {
