--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
             background-color: rgba(42, 48, 113, 0.759);
             color: #fff;
             border-radius: 0.5rem;
-            transition: 0.5s ease;
+            transition: 0.25s ease;
+            justify-content: center;
+            justify-items: center;
         }
         .Photography:hover .Photography-content {
             display: grid;
