--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
         .Disability:hover .Disability-content {
             display: grid;
             grid-template-columns: 0.5fr 0.5fr;
-            justify-content: space-between;
+            justify-content: center;
             justify-items: center;
             width: 37%;
         }
@@ -854,7 +854,7 @@
         }
 
         .titlecontainer a:hover {
-            transform: scale(1.1);
+            transform: scale(1.09);
         }
 
         .ttl-container {
