--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         
         .navbar {
             background: rgba(6, 15, 63, 0.988);
-            height: 56.5px;
+            height: 55px;
             object-fit: cover;
             z-index: 1;
             top: 0;
@@ -3651,8 +3651,8 @@ function showSlides(n) {
                                 But Human-Being Has Provoked It Through His Continual Agression of Mother Nature. Now He Has to Stand up and Figure It Out In Order to Mitigate The Danger [Threat].</b> </p>
                                 <p style="font-family: georgia; color: rgba(49, 49, 49, 0.768); font-size: 16px; line-height: 25px; padding: 5px;">
                             <b>Climate Change</b> has neither been a story nor a comedy. It's a mad reality.
-                            <br>
-                            || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255)">Earthquakes</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Tsunamis</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Floodings</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Wildfires</em> || <em style="font-family: arial; font-size: 11px; color:rgb(0, 149, 255);">Volcanos</em> ||
+                        
+                            | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97)">Earthquakes</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Tsunamis</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Floodings</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Wildfires</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Volcanos</em> | <em style="font-family: arial; font-size: 11px; color:rgba(1, 121, 207, 0.97);">Hurricanes</em> |
                         </p>
                     </div>
                 </a>
@@ -3940,9 +3940,9 @@ function showSlides(n) {
 
                     <a href="https://www.ontario.ca/" target="_blank">
                         <div class="content9a">
-                                <img src="https://th.bing.com/th?id=OIP.SYGUvSg8krNKTJzox9c-7gHaDt&w=349&h=174&c=8&rs=1&qlt=90&o=6&dpr=1.1&pid=3.1&rm=2" alt="Ontario Flag ">
+                                <img src="https://t4.ftcdn.net/jpg/00/78/61/19/240_F_78611972_CtQDfIigCKFRjTyd6n3Hx5zrrXNtte2w.jpg" alt="Ontario Flag ">
                                 <figure>
-                                    <figcaption style="font-family: verdana; color: rgba(145, 145, 145, 0.961); font-size: 12px; text-align: left; margin-top: 2px;">Ontario flag
+                                    <figcaption style="font-family: verdana; color: rgba(145, 145, 145, 0.961); font-size: 12px; text-align: left; margin-top: 1.5px;">Ontario flag
                                     </figcaption>
                             </figure>
                         </div>
