--- a/index.html
+++ b/index.html
@@ -3252,7 +3252,7 @@ function showSlides(n) {
                             <div class="titlecontainer">
                                 <a href="https://www.opensocietyfoundations.org/explainers/value-inclusive-education"
                                     target="blank">
-                                    <b>WHAT MEANS INCLUSIVE EDUCATION ? | Learn More...</b>
+                                    <b>WHAT IS THE VALUE OF INCLUSIVE EDUCATION ? | Learn More...</b>
                                 </a>
                             </div>
 
