--- a/index.html
+++ b/index.html
@@ -2013,7 +2013,7 @@
             justify-items: center;
             border-radius: 1rem;
             width: 920px;
-            height: 210px;
+            height: 215px;
             background: transparent;
             padding: 30px;
         }
@@ -2039,7 +2039,7 @@
         }
 
         .contentx1:hover {
-            background: rgba(199, 199, 199, 0.689);
+            background: rgba(199, 199, 199, 0.868);
             color: rgb(23, 1, 4);
             transition: 0.3s ease-in;
             border: 2px solid rgba(98, 98, 98, 0.846) !important;
@@ -2066,7 +2066,7 @@
         }
 
         .contentx2:hover {
-            background: rgba(199, 199, 199, 0.689);
+            background: rgba(199, 199, 199, 0.842);
             color: rgb(19, 117, 244);
             transition: 0.3s ease-in;
             border: 2px solid rgba(98, 98, 98, 0.846) !important;
@@ -3105,7 +3105,7 @@ background: #717171;
             position: relative;
             top: 25px;
             background-color: #fffffff9;
-            color: rgb(0, 149, 255);
+            color: rgba(0, 138, 236, 0.954);
             padding: 7px;
             flex-direction: column;
             justify-content: center;
@@ -3113,7 +3113,7 @@ background: #717171;
             text-align: center;
             width: 84%;
             padding: 5px;
-            height: 30.25px;
+            height: 40px;
             font-family: 'Merienda';
             font-size: 16px;
             border: 0.5px solid rgba(206, 206, 206, 0.161)c;
@@ -3778,14 +3778,23 @@ function showSlides(n) {
             </div>
 
             <div class="contentx">
+
                 <div class="contentx0">
+
+                    <a href="#">
                 <div class="contentx1">
                     <b>What You're Doing Will Stand As Your Own Experiences</b>
                 </div>
+            </a>
+
+            <a href="https://venturefizz.com/stories/boston/4-ways-accountability-plays-role-success-or-failure">
                 <div class="contentx2">
                     <b>The Way Of Your Success Or Failure Is Mostly Framed By Yourself</b>
                 </div>
+            </a>
+
             </div>
+
             </div>
 
             <div class="contenty">
